--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,6 @@
 {
   "packages": ["packages/*", "applications/*"],
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
