--- a/packages/lib2/package.json
+++ b/packages/lib2/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@namespace/lib1",
+  "name": "@namespace/lib2",
   "version": "1.0.0",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "license": "MIT",
   "files": [
     "lib"
@@ -12,8 +11,5 @@
     "start": "tsc --watch",
     "build": "yarn clean && tsc"
   },
-  "baseUrl": "./src",
-  "dependencies": {
-    "@namespace/lib2": "~1.0.0"
-  }
+  "types": "lib/index.d.ts"
 }
