--- a/packages/lib2/tsconfig.json
+++ b/packages/lib2/tsconfig.json
@@ -11,9 +11,5 @@
     "include": [
         "src/**/*"
     ],
-    "references": [
-        {
-            "path": "../lib2"
-        }
-    ]
+    "references": []
 }
