--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,8 +6,11 @@
   "license": "MIT",
   "useWorkspaces": true,
   "scripts": {
-    "start": "webpack serve --config ../../configs/webpack.serve.config.js",
-    "build": "webpack --config ../../configs/webpack.prod.config.js"
+    "start_webpack": "webpack serve --config ../../configs/webpack.serve.config.js",
+    "build_webpack": "webpack --config ../../configs/webpack.prod.config.js",
+    "start": "snowpack dev",
+    "build": "snowpack build",
+    "build:ts": "tsc -b"
   },
   "dependencies": {
     "@namespace/lib1": "^1.0.0",
@@ -15,6 +18,9 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "snowpack": "^3.1.0-pre.11",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "typescript": "^4.1.5"
