--- a/packages/lib1/package.json
+++ b/packages/lib1/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@namespace/lib1",
   "version": "1.0.0",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.d.ts",
   "license": "MIT",
   "files": [
     "lib"
