--- a/packages/lib2/package.json
+++ b/packages/lib2/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@namespace/lib2",
   "version": "1.0.0",
-  "main": "lib/index.js",
   "license": "MIT",
+  "main": "src/index.ts",
+  "types": "src/index.d.ts",
   "files": [
     "lib"
   ],
@@ -10,6 +11,5 @@
     "clean": "rimraf ./.cache & rimraf ./lib",
     "start": "tsc --watch",
     "build": "yarn clean && tsc"
-  },
-  "types": "lib/index.d.ts"
+  }
 }
