--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "composite": true
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist"],
   "include": ["src/**/*"],
   "references": [
     {
