--- a/package.json
+++ b/package.json
@@ -25,16 +25,15 @@
   },
   "devDependencies": {
     "webpack-cli": "^4.5.0",
-    "webpack": "^5.24.2",
+    "webpack": "^5.24.3",
     "ts-loader": "^8.0.17",
     "webpack-dev-server": "^3.11.2",
-    "html-webpack-plugin": "^5.2.0",
+    "html-webpack-plugin": "^5.3.0",
     "react-hot-loader": "^4.13.0",
     "@hot-loader/react-dom": "^17.0.1",
     "webpack-merge": "^5.7.3",
     "lerna": "^3.22.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.5",
-    "wsrun": "^5.2.4"
+    "typescript": "^4.1.5"
   }
 }
