--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@namespace/app",
   "version": "1.0.0",
-  "baseUrl": "./src",
   "private": true,
   "license": "MIT",
-  "useWorkspaces": true,
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "start_webpack": "webpack serve --config ../../configs/webpack.serve.config.js",
     "build_webpack": "webpack --config ../../configs/webpack.prod.config.js",
@@ -13,16 +17,17 @@
     "build:ts": "tsc -b"
   },
   "dependencies": {
-    "@namespace/lib1": "^1.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@namespace/lib1": "*",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "snowpack": "^3.2.0-pre.2",
+    "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-typescript": "^1.2.1",
-    "snowpack": "^3.1.0-pre.11",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "^4.1.5"
+    "@snowpack/plugin-react-refresh": "^2.4.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
