--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,19 +1,8 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-        "rootDir": "src",
-        "outDir": "dist",
-        "composite": true
-    },
-    "exclude": [
-        "node_modules"
-    ],
-    "include": [
-        "src/**/*"
-    ],
-    "references": [
-        {
-            "path": "../lib1"
-        }
-    ]
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "baseUrl": "./"
+  },
+  "exclude": ["node_modules"],
+  "include": ["src/**/*"]
 }
