--- a/packages/lib1/tsconfig.json
+++ b/packages/lib1/tsconfig.json
@@ -1,14 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "lib"
+    "baseUrl": "./"
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*"],
-  "references": [
-    {
-      "path": "../lib2"
-    }
-  ]
+  "include": ["src/**/*"]
 }
