--- a/packages/lib2/tsconfig.json
+++ b/packages/lib2/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "lib"
+    "baseUrl": "./"
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*"],
-  "references": []
+  "include": ["src", "types"]
 }
