--- a/packages/lib2/tsconfig.json
+++ b/packages/lib2/tsconfig.json
@@ -1,11 +1,16 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "lib",
-    "composite": true
-  },
-  "exclude": ["node_modules", "lib"],
-  "include": ["src/**/*"],
-  "references": []
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {
+        "rootDir": "src",
+        "outDir": "lib",
+        "composite": true
+    },
+    "exclude": [
+        "node_modules",
+        "lib"
+    ],
+    "include": [
+        "src/**/*"
+    ],
+    "references": []
 }
