--- a/packages/lib1/tsconfig.json
+++ b/packages/lib1/tsconfig.json
@@ -1,15 +1,20 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "lib",
-    "composite": true
-  },
-  "exclude": ["node_modules", "lib"],
-  "include": ["src/**/*"],
-  "references": [
-    {
-      "path": "../lib2"
-    }
-  ]
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "outDir": "lib",
+        "composite": true
+    },
+    "exclude": [
+        "node_modules",
+        "lib"
+    ],
+    "include": [
+        "src/**/*"
+    ],
+    "references": [
+        {
+            "path": "../lib2"
+        }
+    ]
 }
