--- a/packages/lib2/package.json
+++ b/packages/lib2/package.json
@@ -2,6 +2,7 @@
   "name": "@namespace/lib2",
   "version": "1.0.0",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "license": "MIT",
   "files": [
     "lib"
@@ -10,6 +11,5 @@
     "clean": "rimraf ./.cache & rimraf ./lib",
     "start": "tsc --watch",
     "build": "yarn clean && tsc"
-  },
-  "types": "lib/index.d.ts"
+  }
 }
